# serializer version: 1
# name: test_parse_existing_ics[completed]
  list([
    dict({
      'status': 'completed',
      'summary': 'Complete Task',
      'uid': '077cb7f2-6c89-11ee-b2a9-0242ac110002',
    }),
  ])
# ---
# name: test_parse_existing_ics[due]
  list([
    dict({
      'due': '2023-10-23',
      'status': 'needs_action',
      'summary': 'Task',
      'uid': '077cb7f2-6c89-11ee-b2a9-0242ac110002',
    }),
  ])
# ---
# name: test_parse_existing_ics[empty]
  list([
  ])
# ---
# name: test_parse_existing_ics[invalid_dtstart_tzname]
  list([
    dict({
      'due': '2023-10-24T11:30:00',
      'status': 'needs_action',
      'summary': 'Task',
      'uid': '077cb7f2-6c89-11ee-b2a9-0242ac110002',
    }),
  ])
# ---
# name: test_parse_existing_ics[migrate_legacy_due]
  list([
    dict({
      'due': '2023-10-23',
      'status': 'needs_action',
      'summary': 'Task',
      'uid': '077cb7f2-6c89-11ee-b2a9-0242ac110002',
    }),
  ])
# ---
# name: test_parse_existing_ics[needs_action]
  list([
    dict({
      'status': 'needs_action',
      'summary': 'Incomplete Task',
      'uid': '077cb7f2-6c89-11ee-b2a9-0242ac110002',
    }),
  ])
# ---
# name: test_parse_existing_ics[not_exists]
  list([
  ])
# ---
